--- a/bower.json
+++ b/bower.json
@@ -14,5 +14,8 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "codelab-components": "googlecodelabs/codelab-components#^3.0.0"
+  }
 }
