add correct folder

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ script: polymer build
 
 deploy:
   provider: pages
-  local-dir: build
+  local-dir: build/es5-bundled
   skip-cleanup: true
   github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
   keep-history: false
