--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ deploy:
   skip-cleanup: true
   github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
   keep-history: false
-  repo: flipper83/flipper83.github.io/starcraft
-  target-branch: starcraft
+  repo: flipper83/starcraft-codelab
+  target-branch: master
   on:
     branch: master
